Fixed spacing between paragraphs and hr tag

--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -27,7 +27,7 @@
 @media screen and (max-width: 700px) {
     .FooterClass {
         p {
-            font-size: 4px;
+            font-size: 5px;
         }
     }
 }
