--- a/src/styles/components/quote.scss
+++ b/src/styles/components/quote.scss
@@ -10,7 +10,7 @@
 @media screen and (max-width: $smallerScreen){
     .Quote {
         width: 90%;
-        font-size: 25px;
+        font-size: 21px;
     }
 }
 // Big monitors
