--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -41,9 +41,7 @@
         display: flex;
         flex-direction: column;
         padding-bottom: 5em;
-        display: grid;
         .AboutSection {
-            row-gap: 1em;
             .QuoteLeft {
                 display: grid;
                 grid-template-areas:
@@ -56,7 +54,7 @@
                     text-align: center;
                     justify-self: center;
                     padding: 0;
-                    font-size: 20px;
+                    font-size: 17px;
                 }
                 span {
                     grid-area: descr;
