--- a/src/styles/pages/mortgage.scss
+++ b/src/styles/pages/mortgage.scss
@@ -7,7 +7,10 @@
     margin: auto;
     p {
         font-size: 20px;
-        margin-bottom: 2em;
+    }
+    hr{
+        width: 100%;
+        margin: 3em 0;
     }
     .Calculator {
         width: 100%;
